--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: traefik
-      version: 30.4.3
+      version: 30.4.2
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -30,9 +30,10 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    ## set stopAll to "true" if you do not want to use traefik
+    # and/or disable its service
     global:
       stopAll: false
-    TZ: America/Los_Angeles
     configmap:
         dashboard:
             data:
@@ -47,116 +48,28 @@ spec:
       access:
         enabled: true
     defaultCertificate: "wethecommon-wildcard-cert"
-    persistence:
-#      crowdsec-bouncer-tls:
- #       enabled: '{{ if .Values.middlewares.bouncer }}true{{ else }}false{{ end }}'
-  #      expandObjectName: false
-  #      mountPath: /etc/traefik/crowdsec-certs
-  #      objectName: crowdsec-bouncer-tls
-  #      type: secret
-      plugins:
-        enabled: true
-        mountPath: /plugins-storage
-        type: emptyDir
-    podOptions:
-      automountServiceAccountToken: true
-    portalhook:
-      enabled: true
-    providers:
-      kubernetesCRD:
-        enabled: true
-      kubernetesIngress:
-        enabled: true
-        publishedService:
-          enabled: true
-    securityContext:
-      container:
-        UMASK: "0022"
-        runAsGroup: 568
-        runAsUser: 568
-      pod:
-        fsGroupChangePolicy: OnRootMismatch
-    tlsOptions:
-      default:
-        cipherSuites:
-          - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
-          - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
-          - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-          - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
-          - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
-          - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
-          - TLS_AES_128_GCM_SHA256
-          - TLS_AES_256_GCM_SHA384
-          - TLS_CHACHA20_POLY1305_SHA256
-        curvePreferences:
-          - CurveP521
-          - CurveP384
-          - X25519
-        minVersion: VersionTLS12
-        sniStrict: false
     service:
-      main:
-        enabled: true
-        loadBalancerIP: ${TRAEFIK_DASH_IP}
-        ports:
-          main:
-            forwardedHeaders:
-              enabled: false
-            port: 9000
-            protocol: http
-            proxyProtocol:
-              enabled: false
-            targetPort: 9000
-        type: LoadBalancer
-      metrics:
-        enabled: true
-        ports:
-          metrics:
-            enabled: true
-            forwardedHeaders:
-                enabled: false
-            port: 9180
-            protocol: http
-            proxyProtocol:
-                enabled: false
-            targetPort: 9180
-            type: ClusterIP
       tcp:
         loadBalancerIP: ${TRAEFIK_IP}
-        externalTrafficPolicy: Local
-        ports:
-          web:
-            enabled: true
-            port: 80
-            protocol: http
-            redirectTo: websecure
-          websecure:
-            enabled: true
-            port: 443
-            protocol: https
-            forwardedHeaders:
-              enabled: true
-              trustedIPs:
-                - 172.16.0.0/16
-                - 172.17.0.0/16
-                - 192.168.1.0/24
-                - 10.6.0.0/24
-              insecureMode: false
-            proxyProtocol:
-              enabled: false
-              trustedIPs: []
-              insecureMode: false
-        serviceAccount:
-            main:
-                enabled: true
-                primary: true
     ingress:
       main:
         enabled: true
         integrations:
+          traefik:
+            enabled: true
+            middlewares:
+              - name: local
+                namespace: traefik
           certManager:
             certificateIssuer: wethecommon-prod-cert
             enabled: true
+        hosts:
+          - host: traefik-dashboard.${BASE_DOMAIN}
+            paths:
+              - path: /dashboard
+                pathType: Prefix
+              - path: /api
+                pathType: Prefix
         ingressRoute:
             dashboard:
                 enabled: true
