--- a/clusters/main/kubernetes/apps/ollama/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ollama/app/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
           homepage:
             description: AI Language Model
             enabled: true
-            group: Home Automation
+            group: Lifestyle & Home
             icon: ""
             name: Ollama
             widget:
