--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
           homepage:
             description: Recipe Organizer
             enabled: true
-            group: Home Automation
+            group: Lifestyle & Home
             icon: ""
             name: Tandoor
             widget:
