--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -69,11 +69,11 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-        tls:
-          - hosts:
-              - traefik-dashboard.${BASE_DOMAIN}
-            clusterIssuer: wethecommon-prod-cert
-            secretName: homepage-tls
+#        tls:
+#          - hosts:
+#              - traefik-dashboard.${BASE_DOMAIN}
+#            clusterIssuer: wethecommon-prod-cert
+#            secretName: homepage-tls
                 
     middlewares:
       ipWhiteList:
