--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -77,7 +77,7 @@ spec:
           options: "default"
     ingress:
       main:
-        enabled: true
+        enabled: false
         integrations:
           traefik:
             enabled: true
