--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -43,7 +43,8 @@ spec:
         externalTrafficPolicy: Local
     logs:
       general:
-        level: INFO
+        level: ERROR
+        format: common
       access:
         enabled: true
     ingressClass:
@@ -86,13 +87,33 @@ spec:
         hosts:
           - host: traefik-dashboard.${BASE_DOMAIN}
             paths:
-              - path: /
+              - path: /dashboard
+                pathType: Prefix
+              - path: /api
                 pathType: Prefix
 #        tls:
 #          - hosts:
 #              - traefik-dashboard.${BASE_DOMAIN}
 #            clusterIssuer: wethecommon-prod-cert
 #            secretName: traefik-tls
+        ingressRoute:
+          dashboard:
+            enabled: true
+      persistence:
+       crowdsec-bouncer-tls:
+         enabled: '{{ if .Values.middlewares.bouncer }}true{{ else }}false{{ end }}'
+         expandObjectName: false
+         mountPath: /etc/traefik/crowdsec-certs
+         objectName: crowdsec-bouncer-tls
+         type: secret
+       plugins:
+         enabled: true
+         mountPath: /plugins-storage
+         type: emptyDir
+      podOptions:
+       automountServiceAccountToken: true
+       portalhook:
+         enabled: true
       middlewares:
         ipWhiteList:
           - name: local
@@ -104,6 +125,23 @@ spec:
               - 192.168.30.0/24
               - 192.168.3.0/24
               - 192.168.9.0/24
-      persistence:
-        crowdsec-bouncer-tls:
-          enabled: false
+        bouncer:
+          - name: bouncer
+            enabled: true
+            logLevel: INFO
+            crowdsecMode: stream
+            crowdsecLapiScheme: https
+            crowdsecLapiHost: crowdsec-service.crowdsec:8080
+            crowdsecLapiKey: ${CS_LAPI_KEY}
+            forwardedHeadersTrustedIPs:
+              - 172.16.0.0/16
+              - 172.17.0.0/16
+              - 192.168.0.0/16
+               #forwardedHeadersCustomName: X-Forwarded-For
+            clientTrustedIPs:
+              - 192.168.10.0/24
+              - 192.168.3.0/24
+              - 192.168.9.0/24
+            crowdsecLapiTLSCertificateAuthorityFile: /etc/traefik/crowdsec-certs/ca.crt
+            crowdsecLapiTLSCertificateBouncerFile: /etc/traefik/crowdsec-certs/tls.crt
+            crowdsecLapiTLSCertificateBouncerKeyFile: /etc/traefik/crowdsec-certs/tls.key
