--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -42,8 +42,8 @@ spec:
                         middlewares:
                             - name: local
                               namespace: traefik
-                            - name: bouncer
-                              namespace: traefik
+                        #    - name: bouncer
+                        #      namespace: traefik
                     certManager:
                         enabled: true
                         certificateIssuer: wethecommon-prod-cert
